--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "build": "rimraf dist/ && babel ./server.js --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/server.js"
   },
   "dependencies": {
-      "socket.io":"~0.9.6",
-      "mime":"~1.2.7"
+    "express": "^4.16.2",
+    "mime": "~1.2.7",
+    "socket.io": "~0.9.6"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "protractor": "~5.1.0",
+    "rimraf": "^2.6.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
